--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
 <body>
   <div class="container">
-    <div>
-      <label for="Original">Original</label>
-      <div class="contenteditable" id="Original" contenteditable="true"></div>
-    </div>
-    <div>
-      <label for="Modificado">Modificado</label>
-      <div class="contenteditable" id="Modificado" contenteditable="true"></div>
-    </div>
+      <div>
+        <label for="Original">Original</label>
+        <div class="contenteditable" id="Original" contenteditable="true"></div>
+      </div>
+      <div>
+        <label for="Modificado">Modificado</label>
+        <div class="contenteditable" id="Modificado" contenteditable="true"></div>
+      </div>
     <input class="button-primary" type="submit" id="btnComparar" value="Comparar">
-    <div id="Resultado" class="contenteditable"></div> <!-- Mostrar diferencias aquí -->
+    <input class="button-primary" type="submit" id="btnLimpiar" value="Limpiar">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="app.js"></script>
   </div>
